2008-12-09  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9915: Typing error in tslib_content ($gifCreateor => $gifCreator)

2008-12-08  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9890: sectionIndex in Menu doesn't work

2008-12-03  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #6415: preg_replace error on PHP 5.2 sometimes resulting in empty pages (thanks to Francois Suter)

2008-12-02  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9878: htmlArea RTE: js error may be raised when loading through IRRE Ajax call

2008-12-02  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #6131: 'last login' of BE and FE users not shown in the BE (thanks to Christian Kuhn)
	* Fixed bug #9850: Strings 'TEMP' and 'RECYCLER' are hardcoded in the filetree (thanks to Stefano Kowalke)

2008-12-02  Dmitry Dulepov  <dmitry@typo3.org>

	* Added feature #9852: Provide a random byte generator in TYPO3 Core (thanks to Marcus Crause)

2008-12-01  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9645: Memcached backend is not working properly
	* Fixed bug #9790: class.gzip_encode.php fails with	open_basedir restrictions
	* Fixed bug #9859: Upload files in fileadmin: Singular and plural are the same ("files") (co-authored with Stefano Kowalke)
	* Fixed bug #9860: Fileadmin: New folders: Singular and plural are the same ("folders") (co-authored with Stefano Kowalke)

2008-12-01  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9864: felogin: Drop languages from locallang.xml

2008-11-29  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9862: missing class for checkbox in t3editor

2008-11-27  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9797: waste of time in LIST module with LOISmode (thanks to Franz Holzinger)
	* Fixed bug #9822: New rendering method for content elements (lesser markup, cleaner code) (thanks to Susanne Moog)
	* Added feature #9742: Zebra columns for fileadmin listing (thanks to Stefano Kowalke)

2008-11-27  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
